// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nuxt-kql > can prefetch KQL queries 1`] = `
{
  "children": [
    {
      "id": "photography",
      "isListed": true,
      "title": "Photography",
    },
    {
      "id": "notes",
      "isListed": true,
      "title": "Notes",
    },
    {
      "id": "about",
      "isListed": true,
      "title": "About us",
    },
    {
      "id": "error",
      "isListed": false,
      "title": "Error",
    },
    {
      "id": "home",
      "isListed": false,
      "title": "Home",
    },
    {
      "id": "sandbox",
      "isListed": false,
      "title": "Sandbox",
    },
  ],
  "title": "Mægazine",
}
`;

exports[`nuxt-kql > fetches Kirby data useKirbyData 1`] = `
{
  "children": [
    {
      "id": "photography",
      "isListed": true,
      "title": "Photography",
    },
    {
      "id": "notes",
      "isListed": true,
      "title": "Notes",
    },
    {
      "id": "about",
      "isListed": true,
      "title": "About us",
    },
    {
      "id": "error",
      "isListed": false,
      "title": "Error",
    },
    {
      "id": "home",
      "isListed": false,
      "title": "Home",
    },
    {
      "id": "sandbox",
      "isListed": false,
      "title": "Sandbox",
    },
  ],
  "title": "Mægazine",
}
`;

exports[`nuxt-kql > fetches queries with $kql 1`] = `
{
  "code": 200,
  "result": {
    "children": [
      {
        "id": "photography",
        "isListed": true,
        "title": "Photography",
      },
      {
        "id": "notes",
        "isListed": true,
        "title": "Notes",
      },
      {
        "id": "about",
        "isListed": true,
        "title": "About us",
      },
      {
        "id": "error",
        "isListed": false,
        "title": "Error",
      },
      {
        "id": "home",
        "isListed": false,
        "title": "Home",
      },
      {
        "id": "sandbox",
        "isListed": false,
        "title": "Sandbox",
      },
    ],
    "title": "Mægazine",
  },
  "status": "OK",
}
`;
